--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <commons-lang3-version>3.7</commons-lang3-version>
     <guava.version>19.0</guava.version>
   </properties>
 
@@ -20,7 +22,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.4</version>
+      <version>${commons-lang3-version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -33,5 +35,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.14.3</version>
+    </dependency>
+
   </dependencies>
 </project>
